FIB-0001 api rpc added, rabbitmq client and listener service in progress

--- a/Fibonacci.Api/appsettings.Development.json
+++ b/Fibonacci.Api/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "RabbitMq": {
+    "Host": "localhost",
+    "Port": "5672",
+    "UserName": "guest",
+    "Password": "guest",
+    "VirtualHost": "/"
+  },
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -16,7 +24,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "%TEMP%\\logs\\log.txt",
+          "path": "C:\\temp\\logs\\FibonacciApiLog.txt",
           "rollingInterval": "Day"
         },
         "Enabled": true
