--- a/Fibonacci.Client.Bll/Fibonacci.Client.Bll.csproj
+++ b/Fibonacci.Client.Bll/Fibonacci.Client.Bll.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,12 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="7.3.0" />
-    <PackageReference Include="FluentValidation" Version="11.2.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fibonacci.Api.Contracts\Fibonacci.Api.Contracts.csproj" />
-    <ProjectReference Include="..\Fibonacci.Calculator\Fibonacci.Calculator.csproj" />
     <ProjectReference Include="..\Fibonacci.Client.Contracts\Fibonacci.Client.Contracts.csproj" />
     <ProjectReference Include="..\Fibonacci.Common\Fibonacci.Common.csproj" />
   </ItemGroup>
