--- a/Fibonacci.Api.Bll/Fibonacci.Api.Bll.csproj
+++ b/Fibonacci.Api.Bll/Fibonacci.Api.Bll.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="7.3.0" />
+    <PackageReference Include="EasyNetQ.Serialization.SystemTextJson" Version="7.3.0" />
     <PackageReference Include="FluentValidation" Version="11.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
