FIB-0001 sample unit test added

--- a/Fibonacci.Api/appsettings.Development.json
+++ b/Fibonacci.Api/appsettings.Development.json
@@ -4,7 +4,8 @@
     "Port": "5672",
     "UserName": "guest",
     "Password": "guest",
-    "VirtualHost": "/"
+    "VirtualHost": "/",
+    "Prefetch": "10000"
   },
 
   "Serilog": {
