--- a/Fibonacci.Client/appsettings.json
+++ b/Fibonacci.Client/appsettings.json
@@ -9,7 +9,8 @@
     "Port": "5672",
     "UserName": "guest",
     "Password": "guest",
-    "VirtualHost": "/"
+    "VirtualHost": "/",
+    "Prefecth": "10000"
   },
 
   "Serilog": {
