--- a/Fibonacci.Api.Tests/Fibonacci.Api.Tests.csproj
+++ b/Fibonacci.Api.Tests/Fibonacci.Api.Tests.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Fibonacci.Api.Bll\Fibonacci.Api.Bll.csproj" />
+  </ItemGroup>
+
 </Project>
