--- a/Fibonacci.Api/Fibonacci.Api.csproj
+++ b/Fibonacci.Api/Fibonacci.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="EasyNetQ.DI.Autofac" Version="7.3.0" />
     <ProjectReference Include="..\Fibonacci.Api.Bll\Fibonacci.Api.Bll.csproj" />
     <ProjectReference Include="..\Fibonacci.Common\Fibonacci.Common.csproj" />
 
