--- a/Fibonacci.Client/Fibonacci.Client.csproj
+++ b/Fibonacci.Client/Fibonacci.Client.csproj
@@ -8,7 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="6.4.0" />
+    <PackageReference Include="AutoMapper.Contrib.Autofac.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="EasyNetQ.DI.Autofac" Version="7.3.0" />
   </ItemGroup>
 
   <ItemGroup>
