FIB-0001 nuget cleanup

--- a/Fibonacci.Client/appsettings.json
+++ b/Fibonacci.Client/appsettings.json
@@ -9,8 +9,7 @@
     "Port": "5672",
     "UserName": "guest",
     "Password": "guest",
-    "VirtualHost": "/",
-    "Prefecth": "10000"
+    "VirtualHost": "/"
   },
 
   "Serilog": {
