--- a/Fibonacci.Api/appsettings.Development.json
+++ b/Fibonacci.Api/appsettings.Development.json
@@ -4,8 +4,7 @@
     "Port": "5672",
     "UserName": "guest",
     "Password": "guest",
-    "VirtualHost": "/",
-    "Prefetch": "10000"
+    "VirtualHost": "/"
   },
 
   "Serilog": {
