FIB-0001 nuget and logger cleanup

--- a/Fibonacci.Client/appsettings.json
+++ b/Fibonacci.Client/appsettings.json
@@ -16,9 +16,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
-        "Microsoft.EntityFrameworkCore.Migrations": "Information"
+        "Microsoft": "Warning"
       }
     },
     "Using": [
