--- a/Fibonacci.Client.Bll/Fibonacci.Client.Bll.csproj
+++ b/Fibonacci.Client.Bll/Fibonacci.Client.Bll.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fibonacci.Api.Contracts\Fibonacci.Api.Contracts.csproj" />
+    <ProjectReference Include="..\Fibonacci.Calculator\Fibonacci.Calculator.csproj" />
     <ProjectReference Include="..\Fibonacci.Client.Contracts\Fibonacci.Client.Contracts.csproj" />
     <ProjectReference Include="..\Fibonacci.Common\Fibonacci.Common.csproj" />
   </ItemGroup>
