FIB-0001 switched fibonacci calculation to BIGINT

--- a/Fibonacci.Client/appsettings.json
+++ b/Fibonacci.Client/appsettings.json
@@ -1,7 +1,11 @@
 {
+  "Calculator": {
+    "MaxBytes": "30"
+  },
+
   "FibonacciApi": {
     "Host": "localhost",
-    "Port": "5000" 
+    "Port": "5000"
   },
 
   "RabbitMq": {
