--- a/Fibonacci.Calculator.Tests/Fibonacci.Calculator.Tests.csproj
+++ b/Fibonacci.Calculator.Tests/Fibonacci.Calculator.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="6.4.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Fibonacci.Calculator\Fibonacci.Calculator.csproj" />
     <ProjectReference Include="..\Fibonacci.Common\Fibonacci.Common.csproj" />
   </ItemGroup>
 
