--- a/Fibonacci.Api/appsettings.Development.json
+++ b/Fibonacci.Api/appsettings.Development.json
@@ -1,6 +1,17 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "https://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  },
+
   "Calculator": {
-    "MaxBytes" :  "30"
+    "MaxBytes": "30"
   },
   "RabbitMq": {
     "Host": "localhost",
